[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/main_ui.gd" id="1"]

[node name="MainUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopBar" type="PanelContainer" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.08

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/TopBar"]
offset_left = 10.0
offset_top = 6.0
offset_right = -10.0
offset_bottom = 32.0
alignment = 1

[node name="TimeLabel" type="Label" parent="Panel/TopBar/HBoxContainer"]
text = "Day 1 - Morning"

[node name="GoldLabel" type="Label" parent="Panel/TopBar/HBoxContainer"]
text = "Gold: 1000"

[node name="XPLabel" type="Label" parent="Panel/TopBar/HBoxContainer"]
text = "XP: 0"

[node name="BottomBar" type="PanelContainer" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.92
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AbilityBar" type="HBoxContainer" parent="Panel/BottomBar"]
offset_left = 10.0
offset_top = 6.0
offset_right = -10.0
offset_bottom = -6.0
alignment = 1

[node name="RightPanel" type="PanelContainer" parent="Panel"]
anchor_left = 0.8
anchor_top = 0.08
anchor_right = 1.0
anchor_bottom = 0.92

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/RightPanel"]
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0

[node name="MonsterInfoTitle" type="Label" parent="Panel/RightPanel/VBoxContainer"]
text = "Selected Monster"

[node name="MonsterInfoPanel" type="PanelContainer" parent="Panel/RightPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/RightPanel/VBoxContainer/MonsterInfoPanel"]
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/RightPanel/VBoxContainer/MonsterInfoPanel/ScrollContainer"]

[node name="MonsterName" type="Label" parent="Panel/RightPanel/VBoxContainer/MonsterInfoPanel/ScrollContainer/VBoxContainer"]
text = "Monster Name"

[node name="HealthBar" type="ProgressBar" parent="Panel/RightPanel/VBoxContainer/MonsterInfoPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 10)
max_value = 100.0
value = 100.0

[node name="EnergyBar" type="ProgressBar" parent="Panel/RightPanel/VBoxContainer/MonsterInfoPanel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 10)
max_value = 100.0
value = 50.0

[node name="EventLog" type="PanelContainer" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.08
anchor_right = 0.2
anchor_bottom = 0.92

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/EventLog"]
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0

[node name="LogTitle" type="Label" parent="Panel/EventLog/VBoxContainer"]
text = "Event Log"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/EventLog/VBoxContainer"]
size_flags_vertical = 3

[node name="LogList" type="VBoxContainer" parent="Panel/EventLog/VBoxContainer/ScrollContainer"]
